refactor: cleanup to rename
